--- a/styles.css
+++ b/styles.css
@@ -730,6 +730,23 @@ nav {
     justify-content: space-between;
 }
 
+.login-olho {
+    position: relative;
+}
+
+.olho-img {
+    width: 2.5vh;
+    height: 2.5vh;
+}
+
+.olho {
+    position: absolute;
+    color: black;
+    top: .8vh;
+    left: 85%;
+    opacity: .8;
+}
+
 #cover {
     position: absolute;
     left: 0;
@@ -759,6 +776,26 @@ nav {
     background-color: rgb(218, 216, 216);
     cursor: pointer;
 }
+
+/*#cover-moves-made {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+#moves-made {
+    height: 38vh;
+    width: 28vh;
+    background-color: green;
+    margin-left: 19vh;
+    overflow-y: scroll;
+}*/
 
 /*-----------------pagina desenvolvedores------------------------*/
 #desenvolvedores-html {
